# UsbSpy

./: .gitignore  CMakeLists.txt  CMakePresets.json  MainFrame.cpp  MainFrame.h  README.md  app.manifest  main.cpp  resource.h  resource.rc
.github/workflows/: build.yml
wtl/: CMakeLists.txt
